style: fix hero paddings, anim styles on about, footer alignment

--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -68,7 +68,7 @@ nav {
   }
 
   @media (max-width: $mobile) {
-    padding: 0 10px 0 20px;
+    padding: 0 20px 0 20px;
     .bars-container {
       display: block;
       align-self: center;
