--- a/src/components/sections/footer/footer.scss
+++ b/src/components/sections/footer/footer.scss
@@ -70,14 +70,10 @@ footer {
   }
 
   @media only screen and (max-width: 768px) {
-    flex-direction: column;
     padding: 0 24px 60px 24px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+    gap: 24px;
 
     .container {
-      text-align: center;
       .container-title {
         font-size: 2.5rem;
       }
